k8s/ingress.yml
# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guess-game-ingress
  namespace: guess-game
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: k8spuc.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80
        - path: /create
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 5000
        - path: /guess
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 5000
